--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  color-scheme: light;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -16,7 +17,7 @@
 }
 
 body {
-  background-color: #fff;
+  background-color: white !important;
   color: var(--foreground);
   background: var(--background);
   font-family: "Inter Tight", sans-serif;
